nb 03_ update + nb_02 small update + func.py small txt update + samples_2025.csv update

--- a/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
+++ b/Notebooks/02_ESS-Analysing_and_interpreting_FDEM_data.ipynb
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Field dataset - Testfield Proefhoeve Bottelaere [Vijverhoek, Oosterzele]\n",
+    "## Field dataset - Testfield Proefhoeve Bottelaere [Vijverhoek, Oosterzele]\n",
     "\n",
     "The key dataset you will work with in this notebook, is the frequency-domain electromagnetic induction (FDEM) dataset that was collected at our testsite on April 4, 2025. Data were collected with a Dualem-21HS instrument. Based on the soil map, soil texture in the test site ranges from sandy loam to clay. WRB soil groups are Cambisols (Eutric Stagnic Cambisols (Loamic)) and Stagnosols (Dystric Retic Stagnosols (Loamic)), both are generally Ruptic (referring to the occurrence of two different source materials, in this case aeolian sand/loess over Tertiary clay). You can explore the soil map, along with the WRB classification, in **_code cell 0.2_**.\n",
     "\n",
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set Export directory"
+    "## Set Export directory"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "source": [
     "You will probably get a message to authorize mounting Drive on Colab.\n",
     "\n",
-    "Next up we can set the filte path in Google Drive, below is the general code for saving files on your Drive Parent folder, best is to save it into a subfolder for this course for example: <br> **'/content/drive/My Drive/EnvSoilSens/Results**"
+    "Next up we can set the file path in Google Drive, below is the general code for saving files on your Drive Parent folder, best is to save it into a subfolder for this course for example: <br> **'/content/drive/My Drive/EnvSoilSens/Results**"
    ]
   },
   {
@@ -425,6 +425,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.columns # change the dataframe name to visualise its columns"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -471,6 +480,8 @@
     "# ----------------------------------------------------------------\n",
     "\n",
     "save_to_file = False    # set to True to save the interpolated grid as a GeoTIF in your export directory\n",
+    "\n",
+    "\n",
     "\n",
     "# Specify the data column of which you want to interpolate the values\n",
     "col = 'HCP1.0'\n",
@@ -636,6 +647,10 @@
     "\n",
     "save_to_file = False    # set to True to save the plots as a PDF in your export directory\n",
     "\n",
+    "# Enlist all QP coil pair response columns in the dataset\n",
+    "QP_response_cols = ['PRP0.6', 'PRP1.1', 'PRP2.1', \n",
+    "                    'HCP0.5', 'HCP1.0', 'HCP2.0']\n",
+    "\n",
     "maximum_depth = 2 # maximum depth to which you want to invert the data\n",
     "\n",
     "# ******************************************************************** #\n",
@@ -644,12 +659,13 @@
     "ax1 = axes[0]\n",
     "ax2 = axes[1]\n",
     "ax3 = axes[2]\n",
-    "for col in dt.columns:\n",
-    "    if col not in ['x','y','z','t','pos'] and 'inph' not in col:\n",
+    "for col in QP_response_cols:\n",
+    "        \n",
     "        if 'PRP' in col:\n",
     "            ax1.plot(dt[col], linestyle = 'dashed', label = col)\n",
     "        else:\n",
     "            ax1.plot(dt[col], label = col)\n",
+    "            \n",
     "ax1.set_ylabel('ECa in mS/m')\n",
     "ax1.set_xlabel('Position along transect (m)')\n",
     "ax1.set_title('ECa data along reference transect (0 = North).')\n",
@@ -658,9 +674,9 @@
     "n_int = 200\n",
     "depths = np.linspace(.0, maximum_depth, n_int)\n",
     "\n",
-    "for col in dt.columns:\n",
-    "    if col not in ['x','y','z','t','pos'] and 'inph' not in col:\n",
-    "        rsens_QP, csens_QP, rsens_IP, csens_IP = lin_sens(col, maximum_depth, n_int)\n",
+    "for col in QP_response_cols:\n",
+    "\n",
+    "        rsens_QP, csens_QP, _, _ = lin_sens(col, maximum_depth, n_int)\n",
     "        if 'PRP' in col:\n",
     "            ax2.plot(rsens_QP, depths, linestyle = 'dashed', label=col)\n",
     "            ax3.plot(csens_QP, depths, linestyle = 'dashed', label=col)\n",
@@ -846,9 +862,9 @@
     "# 3.1: Plot the inversion results and put outcomes into a pandas dataframe\n",
     "# ------------------------------------------------------------------------\n",
     "\n",
-    "save_to_file = False    # set to True to save the inverted data as a csv-file in your export directory\n",
+    "save_to_file = True    # set to True to save the inverted data as a csv-file in your export directory\n",
     "\n",
-    "csv_filename = 'inverted_transect.csv'\n",
+    "csv_filename = 'FDEM_inv_transect.csv'\n",
     "\n",
     "# ******************************************************************** #\n",
     "\n",
@@ -876,7 +892,8 @@
     "# Export the dataframe as a csv-file\n",
     "if save_to_file==True:\n",
     "\n",
-    "    dt_inv.to_csv(export_path + '/' + csv_filename, index=False)"
+    "    dt_inv.to_csv(export_path + '/' + csv_filename, index=False)\n",
+    "    print('Exported inverted transect data to: ', export_path + '/' + csv_filename)"
    ]
   },
   {
@@ -943,7 +960,7 @@
     "You can adjust de starting depths array (`depths_in`). Try creating a \n",
     "3-layer model based on the observations you made on the field\n",
     "'''\n",
-    "save_to_file = False    # set to True to save the inverted data as a csv-file in your export directory\n",
+    "save_to_file = False    # set to True to save the plot as a pdf file in your export directory\n",
     "\n",
     "#depths_in = [0.6,1.0] \n",
     "depths_in = np.arange(0.10, 1.75, 0.10) \n",
@@ -962,7 +979,15 @@
     "# Run the inversion\n",
     "sample_transect.invert(forwardModel='CS', alpha=0.23, njobs=-1)\n",
     "print('   Finished inversion')\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ----------------------------------------------------------------------\n",
     "# Plotting and exporting the EC profiles figure as a pdf\n",
     "# ----------------------------------------------------------------------\n",
@@ -1033,10 +1058,10 @@
    "outputs": [],
    "source": [
     "# 3.4: Export as a csv-file\n",
-    "csv_filename = 'inverted_samples.csv'\n",
+    "csv_filename = 'FDEM_inv_samples.csv'\n",
     "\n",
     "ds_all.to_csv(export_path + '/' + csv_filename, index=False)\n",
-    "\n",
+    "print('Exported the inversion results to: ', export_path + '/' + csv_filename)\n",
     "# ******************************************************************** #"
    ]
   },
@@ -1170,7 +1195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ESS",
    "language": "python",
    "name": "python3"
   },
@@ -1184,7 +1209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
